Pink design - - Numeric list - fix alignment

--- a/packages/ui/src/7-components/_list.scss
+++ b/packages/ui/src/7-components/_list.scss
@@ -48,6 +48,7 @@
   &-item {
     counter-increment: number;
     display: flex;
+    align-items: baseline;
     column-gap: pxToRem(24);
     &::before {
       content: counter(number);
